# sds-data-manager

./: .gitignore  .gitpod.Dockerfile  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README  README.md  app.py  app_backup.py  app_template_dev.py  cdk.context.json  cdk.json  docker-compose.yml  jsonreader.py  opensearch_read.py  pyproject.toml  read_test.py  requirements.txt  template.json  testing.py  write_and_read_index_local.py
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: feature-template.md  spike-template.md
.github/workflows/: deploy.yml  deploy_containers.yml  deploy_dev_containers.yml  test-tenzin.yml  test.yml
dockerfiles/: Dockerfile.dev  Dockerfile.prod
docs/: README.md  index.rst
docs/source/: conf.py  index.rst
docs/source/cdk/: aws-setup.rst  backup-deploy.rst  cdk-deployment-personal-aws.rst  cdk-deployment.rst  ialirt-setup.rst  index.rst  opensearch-setup  s3-replication.rst
lambda_layer/python/: requirements.txt
scripts/: sds_api.py
sds_data_manager/: sds_data_manager_stack.py
sds_data_manager/SDSCode/: upload_api.py
sds_data_manager/SDSCode/opensearch_utils/: index.py
sds_data_manager/batch/efs-access-batch/: Dockerfile  efs_check.py  read_from_efs.py  requirements.txt
sds_data_manager/cloudfront_functions/: test_uri_routes.js  update_uri_routes.js
sds_data_manager/config/: config.json
sds_data_manager/constructs/: api_gateway_construct.py  backup_bucket_construct.py  batch_compute_resources.py  data_bucket_construct.py  database_construct.py  dependency_lambda_construct.py  ecr_construct.py  efs_construct.py  ialirt_api_manager_construct.py  ialirt_bucket_construct.py  ialirt_ingest_lambda_construct.py  ialirt_processing_construct.py  indexer_lambda_construct.py  instrument_lambdas.py  lambda_layer_construct.py  monitoring_construct.py  monitoring_lambda_construct.py  networking_construct.py  processing_construct.py  route53_hosted_zone.py  sdc_spin_repoint_construct.py  sdc_step_function.py  sds_api_manager_construct.py  sqs_construct.py  website_hosting.py
sds_data_manager/ecr_image/imap_processing/: Dockerfile  script.py
sds_data_manager/lambda_code/: batch_starter.py  downstream_dependents.json  requirements.txt
sds_data_manager/lambda_code/IAlirtCode/: ialirt_catalog_api.py  ialirt_ingest.py  ialirt_query_api.py
sds_data_manager/lambda_code/SDSCode/: batch_starter.py  conftest.py  create_schema.py  database_handler.py  dependency_config.csv  dependency_config.py  dependency_config_codice.py  dependency_config_ultra.py  download_api.py  download_query_api.py  downstream_dependency.json  downstream_dependency_config.py  downstream_dependents.json  indexer.py  lambda_custom_events.py  path_helper.py  queries.py  query_api.py  spin_table_api.py  test_indexer_lambda.py  upload_api.py  upstream_dependency.json  upstream_dependency_config.py
sds_data_manager/lambda_code/efs_lambda/: imap_2025_230_2025_230_01.repoint.csv  lambda_function.py
sds_data_manager/lambda_code/imap_processing/: script.py
sds_data_manager/lambda_code/route53_hosted_zone_code/: lambda_handler.py
sds_data_manager/lambda_code/spice/: sdc_maintained_spin_repoint_handler.py
sds_data_manager/lambda_images/data_checker_lambda/: Dockerfile  data_checker.py
sds_data_manager/lambda_images/imap_process_kickoff_lambda/: Dockerfile  script.py
sds_data_manager/lambda_images/imap_processing_lambda/: Dockerfile  (+1 more)
sds_data_manager/stacks/: api_gateway_stack.py  backup_bucket_stack.py  batch_compute_resources.py  batch_job_stack.py  create_schema_stack.py  data_bucket_stack.py  database_stack.py  domain_stack.py  dynamo_db_stack.py  dynamodb_stack.py  ecr_stack.py  efs_lambda_stack.py  efs_stack.py  ialirt_bucket_stack.py  ialirt_ingest_lambda_stack.py  ialirt_processing_stack.py  indexer_lambda_stack.py  instrument_lambdas.py  lambda_layer_stack.py  lambda_stack.py  monitoring_stack.py  networking_stack.py  opensearch_stack.py  processing_pipeline_stack.py  processing_stack.py  s3_data_buckets_stack.py  s3_stack.py  sds_api_manager_stack.py  sds_data_manager_stack.py  sqs_stack.py  step_function_stack.py  vpc_stack.py
sds_data_manager/utils/: get_downstream_dependencies.py  stackbuilder.py
sds_in_a_box/: sds_in_a_box_stack.py
sds_in_a_box/SDSCode/: api.py  cognito_signup_message.py  config.json  download_api.py  download_query_api.py  indexer.py  lambda.env  queries.py  read_index.py  requirements.txt  upload_api.py
test/: test_action.py  test_client.py  test_document.py  test_index.py  test_payload.py
test/unit/: test_sds_in_a_box_stack.py
tests/: conftest.py
tests/docker_images/: Dockerfile  Dockerfile.testing  imap_api.py
tests/infrastructure/: conftest.py  test_apigateway.py  test_backup_bucket_stack.py  test_create_schema_stack.py  test_data_bucket.py  test_data_manager_stack.py  test_database_construct.py  test_database_stack.py  test_dynamo_db_stack.py  test_ialirt_ingest_lambda_construct.py  test_ialirt_ingest_lambda_stack.py  test_ialirt_processing_construct.py  test_ialirt_processing_stack.py  test_indexer_lambda_construct.py  test_indexer_lambda_stack.py  test_lambda_layer_construct.py  test_monitoring.py  test_open_search_stack.py  test_processing_step_function_components.py  test_sds_api_manager_construct.py  test_sds_api_manager_stack.py  test_website.py  test_website_cloudfront_function.py
tests/lambda_endpoints/: conftest.py  test_batch_starter.py  test_dependency.py  test_download_api.py  test_download_query_api.py  test_ialirt_ingest.py  test_ialirt_query_api.py  test_indexer.py  test_indexer_lambda.py  test_path_helper.py  test_queries.py  test_query_api.py  test_sdc_maintained_spin_repoint.py  test_synchronizer.py  test_upload_api.py
tests/opensearch_utils/: test_action.py  test_client.py  test_document.py  test_index.py  test_payload.py  test_query.py  test_snapshot.py
tests/test-data/: codicehi_event.json
tests/unit/: test_action.py  test_data_manager_stack.py  test_document.py  test_download_query_api.py  test_index.py  test_indexer.py  test_queries.py  test_sds_in_a_box_stack.py
(+44 files in other folders)
